# django-rahavard

./: MAINFEST.in  setup.cfg
django_rahavard/management/commands/: actions.py
