[metadata]
name = django-rahavard
version = 0.0.61
description = A Django App Containing Overridden Django Commands
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davoudarsalani/django-rahavard
author = Davoud Arsalani
author_email = d_arsalani@yahoo.com
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Environment :: Web Environment

[options]
include_package_data = true
packages = find:
# python_requires = >=3.10
install_requires =
    django
    natsort
    rahavard
